[project]
name = "task-master-api"
version = "0.1.0"
description = "REST API for Task Management with User Roles and JWT Authentication"
authors = [
    {name = "piales00",email = "perez.izquierdo.piero@gmail.com"}
]
license = "none"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
